# cogs

./: Cargo.toml  flake.nix
checks/: fmt-alejandra.nix  fmt-rustfmt.nix  fmt-schemat.nix
cogs/clos/: clos.scm  cog.scm
cogs/collections/: cog.scm  dll.scm  iterators.scm  mhash.scm  mpair.scm
cogs/colors/: cog.scm  colors.scm
cogs/fs/: cog.scm  fs.scm
cogs/lists/: cog.scm  lists.scm
cogs/logging/: cog.scm  log.scm
cogs/match/: cog.scm  match.scm
cogs/time/: cog.scm  time.scm
cogs/webrequests/: Cargo.toml  cog.scm  webrequests.scm
cogs/webrequests/src/: lib.rs
cogs/websockets/: Cargo.toml  cog.scm  websockets.scm
cogs/websockets/src/: lib.rs
