[workspace]
resolver = "2"
members = ["cogs/webrequests"]

[workspace.package]
edition = "2021"
authors = ["mattwparas <matthewparas2020@u.northwestern.edu>"]
license = "MIT OR Apache-2.0"
publish = false

[workspace.dependencies]
steel-core = { git = "https://github.com/mattwparas/steel", features = [
  "dylibs",
] }
