[package]
name = "websockets"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
abi_stable = "0.11"
steel-core.workspace = true
tungstenite = { version = "0.23", features = ["rustls-tls-native-roots"] }
